examples/passing/ConstraintParsingIssue.purs
module Main where

import Effect.Console

class X a

instance x :: X (Array (Array a)) => X (Array a)

main = log "Done"
